[metadata]
# replace with your username:
name = classroom-tool
version = 0.9.2
author = David A. Ham
author_email = david.ham@imperial.ac.uk
description = A package to help instructors work with GitHub Classroom
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dham/classroom-tool
project_urls =
    Bug Tracker = https://github.com/dham/classroom-tool/issues
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Education

[options]
packages = find:
python_requires = >=3.6
install_requires = 
    pygithub
    gitpython
    pandas
    selenium
scripts = scripts/classroom-tool

[options.packages.find]
where = .
